fix: reordenacao cards painel admin e metadados globais

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 
   <!-- Favicons e Ícones -->
   <link rel="icon" type="image/svg+xml" href="/icon.svg" />
-  <link rel="apple-touch-icon" href="/favicon.svg" />
+  <link rel="apple-touch-icon" href="/icon.svg" />
 
   <!-- Manifesto PWA -->
   <link rel="manifest" href="/manifest.json" />
 
   <!-- Configurações de Visualização e Tema -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#F8FAFC" />
+  <meta name="theme-color" content="#38bdf8" />
 
   <!-- SEO Básico -->
   <title>Gestão MVP | Sistema de Controle</title>
@@ -25,21 +25,21 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://seusite.com/" />
+  <meta property="og:url" content="http://oficinapro.vercel.app/" />
   <meta property="og:title" content="Gestão MVP | Sistema de Controle" />
   <meta property="og:description"
     content="Sistema completo para gestão de alunos, oficinas e administração de projetos sociais e educacionais." />
-  <meta property="og:image" content="/favicon.svg" />
+  <meta property="og:image" content="/icon.svg" />
   <meta property="og:locale" content="pt_BR" />
   <meta property="og:site_name" content="Gestão MVP" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary" />
-  <meta property="twitter:url" content="https://seusite.com/" />
+  <meta property="twitter:url" content="http://oficinapro.vercel.app/" />
   <meta property="twitter:title" content="Gestão MVP | Sistema de Controle" />
   <meta property="twitter:description"
     content="Sistema completo para gestão de alunos, oficinas e administração de projetos sociais e educacionais." />
-  <meta property="twitter:image" content="/favicon.svg" />
+  <meta property="twitter:image" content="/icon.svg" />
 
 </head>
 
