--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <!-- Favicons e Ícones -->
   <link rel="icon" type="image/svg+xml" href="/icon.svg" />
   <link rel="apple-touch-icon" href="/icon.svg" />
+  <link rel="shortcut icon" href="./icon.svg" type="image/x-icon">
 
   <!-- Manifesto PWA -->
   <link rel="manifest" href="/manifest.json" />
