--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- Configurações de Visualização e Tema -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#38bdf8" />
+  <meta name="theme-color" content="#f8fafc" />
 
   <!-- SEO Básico -->
   <title>Gestão MVP | Sistema de Controle</title>
